# binxGPT

./: Dockerfile  LICENSE  app.py  pyproject.toml  setup.py  utilities.py
templates/: index.html
